@@ -1,26 +1,36 @@
 package org.hypertrace.trace.reader.entities;
 
-import static org.hypertrace.trace.reader.attributes.EntityUtil.buildAttributesWithKeyValues;
 import static org.hypertrace.trace.reader.attributes.AvroUtil.defaultedEventBuilder;
 import static org.hypertrace.trace.reader.attributes.AvroUtil.defaultedStructuredTraceBuilder;
+import static org.hypertrace.trace.reader.attributes.EntityUtil.buildAttributesWithKeyValues;
+import static org.hypertrace.trace.reader.attributes.LiteralValueUtil.longLiteral;
 import static org.hypertrace.trace.reader.attributes.LiteralValueUtil.stringLiteral;
+import static org.hypertrace.trace.reader.entities.AttributeValueUtil.longAttributeValue;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import io.reactivex.rxjava3.core.Observable;
 import io.reactivex.rxjava3.core.Single;
-import java.util.List;
+import java.time.Duration;
+import java.util.Arrays;
 import java.util.Map;
 import org.hypertrace.core.attribute.service.cachingclient.CachingAttributeClient;
 import org.hypertrace.core.attribute.service.v1.AttributeMetadata;
+import org.hypertrace.core.attribute.service.v1.AttributeSource;
 import org.hypertrace.core.attribute.service.v1.AttributeType;
 import org.hypertrace.core.attribute.service.v1.LiteralValue;
 import org.hypertrace.core.datamodel.Event;
 import org.hypertrace.core.datamodel.StructuredTrace;
 import org.hypertrace.entity.data.service.rxclient.EntityDataClient;
 import org.hypertrace.entity.data.service.v1.Entity;
+import org.hypertrace.entity.data.service.v1.MergeAndUpsertEntityRequest.UpsertCondition;
+import org.hypertrace.entity.data.service.v1.MergeAndUpsertEntityRequest.UpsertCondition.Predicate;
+import org.hypertrace.entity.data.service.v1.MergeAndUpsertEntityRequest.UpsertCondition.Predicate.PredicateOperator;
 import org.hypertrace.entity.type.service.rxclient.EntityTypeClient;
 import org.hypertrace.entity.type.service.v2.EntityType;
 import org.hypertrace.trace.reader.attributes.TraceAttributeReader;
@@ -38,16 +48,26 @@ class DefaultTraceEntityReaderTest {
   private static final String TEST_ENTITY_ID_ATTRIBUTE_VALUE = "id-value";
   private static final String TEST_ENTITY_NAME_ATTRIBUTE_KEY = "name";
   private static final String TEST_ENTITY_NAME_ATTRIBUTE_VALUE = "name-value";
+  private static final String TEST_ENTITY_TIMESTAMP_ATTRIBUTE_KEY = "timestamp";
   private static final AttributeMetadata TEST_ENTITY_ID_ATTRIBUTE =
       AttributeMetadata.newBuilder()
           .setScopeString(TEST_ENTITY_TYPE_NAME)
           .setKey(TEST_ENTITY_ID_ATTRIBUTE_KEY)
+          .addSources(AttributeSource.EDS)
           .setType(AttributeType.ATTRIBUTE)
           .build();
   private static final AttributeMetadata TEST_ENTITY_NAME_ATTRIBUTE =
       AttributeMetadata.newBuilder()
           .setScopeString(TEST_ENTITY_TYPE_NAME)
+          .addSources(AttributeSource.EDS)
           .setKey(TEST_ENTITY_NAME_ATTRIBUTE_KEY)
+          .setType(AttributeType.ATTRIBUTE)
+          .build();
+  private static final AttributeMetadata TEST_ENTITY_TIMESTAMP_ATTRIBUTE =
+      AttributeMetadata.newBuilder()
+          .setScopeString(TEST_ENTITY_TYPE_NAME)
+          .addSources(AttributeSource.EDS)
+          .setKey(TEST_ENTITY_TIMESTAMP_ATTRIBUTE_KEY)
           .setType(AttributeType.ATTRIBUTE)
           .build();
   private static final EntityType TEST_ENTITY_TYPE =
@@ -86,16 +106,17 @@ class DefaultTraceEntityReaderTest {
             this.mockTypeClient,
             this.mockDataClient,
             this.mockAttributeClient,
-            this.mockAttributeReader);
+            this.mockAttributeReader,
+            Duration.ofSeconds(15));
   }
 
   @Test
   void canReadAnEntity() {
     mockSingleEntityType();
-    mockAvailableAttributes();
-    mockCustomerId();
-    mockEntityIdWith(stringLiteral(TEST_ENTITY_ID_ATTRIBUTE_VALUE));
-    mockEntityNameWith(stringLiteral(TEST_ENTITY_NAME_ATTRIBUTE_VALUE));
+    mockGetAllAttributes(TEST_ENTITY_ID_ATTRIBUTE, TEST_ENTITY_NAME_ATTRIBUTE);
+    mockTenantId();
+    mockAttributeRead(TEST_ENTITY_ID_ATTRIBUTE, stringLiteral(TEST_ENTITY_ID_ATTRIBUTE_VALUE));
+    mockAttributeRead(TEST_ENTITY_NAME_ATTRIBUTE, stringLiteral(TEST_ENTITY_NAME_ATTRIBUTE_VALUE));
     mockEntityUpsert();
 
     assertEquals(
@@ -108,10 +129,10 @@ class DefaultTraceEntityReaderTest {
   @Test
   void canReadAllEntities() {
     mockAllEntityTypes();
-    mockAvailableAttributes();
-    mockCustomerId();
-    mockEntityIdWith(stringLiteral(TEST_ENTITY_ID_ATTRIBUTE_VALUE));
-    mockEntityNameWith(stringLiteral(TEST_ENTITY_NAME_ATTRIBUTE_VALUE));
+    mockGetAllAttributes(TEST_ENTITY_ID_ATTRIBUTE, TEST_ENTITY_NAME_ATTRIBUTE);
+    mockTenantId();
+    mockAttributeRead(TEST_ENTITY_ID_ATTRIBUTE, stringLiteral(TEST_ENTITY_ID_ATTRIBUTE_VALUE));
+    mockAttributeRead(TEST_ENTITY_NAME_ATTRIBUTE, stringLiteral(TEST_ENTITY_NAME_ATTRIBUTE_VALUE));
     mockEntityUpsert();
 
     assertEquals(
@@ -122,10 +143,10 @@ class DefaultTraceEntityReaderTest {
   @Test
   void omitsEntityBasedOnMissingAttributes() {
     mockSingleEntityType();
-    mockAvailableAttributes();
-    mockCustomerId();
-    mockEntityIdWith(LiteralValue.getDefaultInstance());
-    mockEntityNameWith(stringLiteral(TEST_ENTITY_NAME_ATTRIBUTE_VALUE));
+    mockGetAllAttributes(TEST_ENTITY_ID_ATTRIBUTE, TEST_ENTITY_NAME_ATTRIBUTE);
+    mockTenantId();
+    mockAttributeRead(TEST_ENTITY_ID_ATTRIBUTE, LiteralValue.getDefaultInstance());
+    mockAttributeRead(TEST_ENTITY_NAME_ATTRIBUTE, stringLiteral(TEST_ENTITY_NAME_ATTRIBUTE_VALUE));
 
     assertTrue(
         this.entityReader
@@ -134,34 +155,88 @@ class DefaultTraceEntityReaderTest {
             .blockingGet());
   }
 
-  private void mockCustomerId() {
+  @Test
+  void omitsUpsertConditionIfNoTimestampAttributeDefined() {
+    mockSingleEntityType();
+    mockGetAllAttributes(TEST_ENTITY_ID_ATTRIBUTE, TEST_ENTITY_NAME_ATTRIBUTE);
+    mockTenantId();
+    mockAttributeRead(TEST_ENTITY_ID_ATTRIBUTE, stringLiteral(TEST_ENTITY_ID_ATTRIBUTE_VALUE));
+    mockAttributeRead(TEST_ENTITY_NAME_ATTRIBUTE, stringLiteral(TEST_ENTITY_NAME_ATTRIBUTE_VALUE));
+    mockEntityUpsert();
+
+    this.entityReader
+        .getAssociatedEntityForSpan(TEST_ENTITY_TYPE_NAME, TEST_TRACE, TEST_SPAN)
+        .blockingSubscribe();
+
+    verify(mockDataClient, times(1))
+        .createOrUpdateEntityEventually(any(), eq(UpsertCondition.getDefaultInstance()), any());
+  }
+
+  @Test
+  void includesUpsertConditionIfTimestampAttributeDefined() {
+    mockSingleEntityType(
+        TEST_ENTITY_TYPE.toBuilder()
+            .setTimestampAttributeKey(TEST_ENTITY_TIMESTAMP_ATTRIBUTE_KEY)
+            .build());
+    mockGetAllAttributes(
+        TEST_ENTITY_ID_ATTRIBUTE, TEST_ENTITY_NAME_ATTRIBUTE, TEST_ENTITY_TIMESTAMP_ATTRIBUTE);
+    mockGetSingleAttribute(TEST_ENTITY_TIMESTAMP_ATTRIBUTE);
+    mockTenantId();
+    mockAttributeRead(TEST_ENTITY_ID_ATTRIBUTE, stringLiteral(TEST_ENTITY_ID_ATTRIBUTE_VALUE));
+    mockAttributeRead(TEST_ENTITY_NAME_ATTRIBUTE, stringLiteral(TEST_ENTITY_NAME_ATTRIBUTE_VALUE));
+    mockAttributeRead(TEST_ENTITY_TIMESTAMP_ATTRIBUTE, longLiteral(30));
+    mockEntityUpsert();
+
+    this.entityReader
+        .getAssociatedEntityForSpan(TEST_ENTITY_TYPE_NAME, TEST_TRACE, TEST_SPAN)
+        .blockingSubscribe();
+
+    UpsertCondition expectedCondition =
+        UpsertCondition.newBuilder()
+            .setPropertyPredicate(
+                Predicate.newBuilder()
+                    .setAttributeKey(TEST_ENTITY_TIMESTAMP_ATTRIBUTE_KEY)
+                    .setOperator(PredicateOperator.PREDICATE_OPERATOR_LESS_THAN)
+                    .setValue(longAttributeValue(30))
+                    .build())
+            .build();
+    verify(mockDataClient, times(1))
+        .createOrUpdateEntityEventually(any(), eq(expectedCondition), any());
+  }
+
+  private void mockTenantId() {
     when(this.mockAttributeReader.getTenantId(TEST_SPAN)).thenReturn(TENANT_ID);
   }
 
-  private void mockEntityNameWith(LiteralValue value) {
+  private void mockAttributeRead(AttributeMetadata attributeMetadata, LiteralValue value) {
     when(this.mockAttributeReader.getSpanValue(
-            TEST_TRACE, TEST_SPAN, TEST_ENTITY_TYPE_NAME, TEST_ENTITY_NAME_ATTRIBUTE_KEY))
-        .thenReturn(Single.just(value));
-  }
-
-  private void mockEntityIdWith(LiteralValue value) {
-    when(this.mockAttributeReader.getSpanValue(
-            TEST_TRACE, TEST_SPAN, TEST_ENTITY_TYPE_NAME, TEST_ENTITY_ID_ATTRIBUTE_KEY))
+            TEST_TRACE, TEST_SPAN, attributeMetadata.getScopeString(), attributeMetadata.getKey()))
         .thenReturn(Single.just(value));
   }
 
   private void mockEntityUpsert() {
-    when(this.mockDataClient.getOrCreateEntity(any(Entity.class)))
+    when(this.mockDataClient.createOrUpdateEntityEventually(
+            any(Entity.class), any(UpsertCondition.class), any(Duration.class)))
         .thenAnswer(invocation -> Single.just(invocation.getArgument(0)));
   }
 
-  private void mockAvailableAttributes() {
+  private void mockGetAllAttributes(AttributeMetadata... attributeMetadata) {
     when(this.mockAttributeClient.getAllInScope(TEST_ENTITY_TYPE_NAME))
-        .thenReturn(Single.just(List.of(TEST_ENTITY_ID_ATTRIBUTE, TEST_ENTITY_NAME_ATTRIBUTE)));
+        .thenReturn(Single.just(Arrays.asList(attributeMetadata)));
+  }
+
+  private void mockGetSingleAttribute(AttributeMetadata attributeMetadata) {
+    when(this.mockAttributeClient.get(
+            attributeMetadata.getScopeString(), attributeMetadata.getKey()))
+        .thenReturn(Single.just(attributeMetadata));
   }
 
   private void mockSingleEntityType() {
-    when(this.mockTypeClient.get(TEST_ENTITY_TYPE_NAME)).thenReturn(Single.just(TEST_ENTITY_TYPE));
+    mockSingleEntityType(TEST_ENTITY_TYPE);
+  }
+
+  private void mockSingleEntityType(EntityType entityType) {
+    when(this.mockTypeClient.get(entityType.getName())).thenReturn(Single.just(entityType));
   }
 
   private void mockAllEntityTypes() {
